--- a/Dockerfile.fragconsole
+++ b/Dockerfile.fragconsole
@@ -1,7 +1,7 @@
 FROM alpine:latest as build
 RUN apk update &&\
     apk upgrade &&\ 
-    apk add --no-cache linux-headers alpine-sdk cmake tcl openssl-dev zlib-dev yasm x264-dev x265-dev go libsrt-dev
+    apk add --no-cache linux-headers alpine-sdk cmake tcl openssl-dev zlib-dev yasm x264-dev x265-dev go libsrt-dev libsrt-progs
 WORKDIR /tmp
 RUN git clone https://github.com/ravenium/fragconsole.git
 RUN git clone https://github.com/FFmpeg/FFmpeg.git
