--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,22 +1,22 @@
 version: "3.9"
 services:
   srtrelay:
-    image: "srtrelay:latest"
+    image: "ravenium/srtrelay:latest"
     ports:
       - "1935:1935/udp"
     command: -address 0.0.0.0:1935
     networks:
         - fragforce
-    #volumes:
-    #    - ./config.toml:/conf/config.toml
+    volumes:
+        - $PWD/config.toml:/conf/config.toml
   frag_restream_record:
-    image: "fragconsole:latest"
+    image: "ravenium/fragconsole:latest"
     ports:
         - "3000:3000"
     command: -s -serverurl http://srtrelay:8080/streams -streamurl srt://srtrelay:1935 -listen 0.0.0.0:3000 -s
     networks:
         - fragforce
     volumes:
-        - ./record:/record
+        - $PWD/record:/record
 networks:
   fragforce:
